css and card click updates

--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
+    <h1>Match All Eight Pairs </h1>
+            <div class="row">
+                <div class="square pink backside" id = "sq0" onclick="cardClicked(event)"></div>
+                <div class="square rust backside" id = "sq1" onclick="cardClicked(event)"></div>
+                <div class="square blue backside" id = "sq2" onclick="cardClicked(event)"></div>
+                <div class="square green backside" id = "sq3" onclick="cardClicked(event)"></div>
+            </div>
+            <div class="row">
+                <div class="square yellow backside" id = "sq4" onclick="cardClicked(event)"></div>
+                <div class="square teal backside" id = "sq5" onclick="cardClicked(event)"></div>  
+                <div class="square orange backside" id = "sq6" onclick="cardClicked(event)"></div>
+                <div class="square purple backside" id = "sq7" onclick="cardClicked(event)"></div>              
+            </div>
+            <div class="row">
+                <div class="square purple backside" id = "sq8" onclick="cardClicked(event)"></div>
+                <div class="square blue backside" id = "sq9" onclick="cardClicked(event)"></div>
+                <div class="square yellow backside" id = "sq10" onclick="cardClicked(event)"></div>
+                <div class="square orange backside" id = "sq11" onclick="cardClicked(event)"></div>
+            </div>
+            <div class="row">
+                <div class="square green backside" id = "sq12" onclick="cardClicked(event)"></div>
+                <div class="square pink backside" id = "sq13" onclick="cardClicked(event)"></div>
+                <div class="square teal backside" id = "sq14" onclick="cardClicked(event)"></div>
+                <div class="square rust backside" id = "sq15" onclick="cardClicked(event)"></div>
+            </div>
+    <button>Reset Game</button>
     
 </body>
 </html>
