--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
 </head>
 <body>
     <h1>Match All Eight Pairs </h1>
+    <h2></h2>
             <div class="row">
-                <div class="square pink backside" id = "sq0" onclick="cardClicked(event)"></div>
-                <div class="square rust backside" id = "sq1" onclick="cardClicked(event)"></div>
-                <div class="square blue backside" id = "sq2" onclick="cardClicked(event)"></div>
-                <div class="square green backside" id = "sq3" onclick="cardClicked(event)"></div>
+                <div class="square pink backside" id="0" onclick="cardClicked(event)"></div>
+                <div class="square rust backside" id="1" onclick="cardClicked(event)"></div>
+                <div class="square blue backside" id="2" onclick="cardClicked(event)"></div>
+                <div class="square green backside" id="3" onclick="cardClicked(event)"></div>
             </div>
             <div class="row">
-                <div class="square yellow backside" id = "sq4" onclick="cardClicked(event)"></div>
-                <div class="square teal backside" id = "sq5" onclick="cardClicked(event)"></div>  
-                <div class="square orange backside" id = "sq6" onclick="cardClicked(event)"></div>
-                <div class="square purple backside" id = "sq7" onclick="cardClicked(event)"></div>              
+                <div class="square yellow backside" id="4" onclick="cardClicked(event)"></div>
+                <div class="square teal backside" id="5" onclick="cardClicked(event)"></div>  
+                <div class="square orange backside" id="6" onclick="cardClicked(event)"></div>
+                <div class="square purple backside" id="7" onclick="cardClicked(event)"></div>              
             </div>
             <div class="row">
-                <div class="square purple backside" id = "sq8" onclick="cardClicked(event)"></div>
-                <div class="square blue backside" id = "sq9" onclick="cardClicked(event)"></div>
-                <div class="square yellow backside" id = "sq10" onclick="cardClicked(event)"></div>
-                <div class="square orange backside" id = "sq11" onclick="cardClicked(event)"></div>
+                <div class="square purple backside" id="8" onclick="cardClicked(event)"></div>
+                <div class="square blue backside" id="9" onclick="cardClicked(event)"></div>
+                <div class="square yellow backside" id="10" onclick="cardClicked(event)"></div>
+                <div class="square orange backside" id="11" onclick="cardClicked(event)"></div>
             </div>
             <div class="row">
-                <div class="square green backside" id = "sq12" onclick="cardClicked(event)"></div>
-                <div class="square pink backside" id = "sq13" onclick="cardClicked(event)"></div>
-                <div class="square teal backside" id = "sq14" onclick="cardClicked(event)"></div>
-                <div class="square rust backside" id = "sq15" onclick="cardClicked(event)"></div>
+                <div class="square green backside" id="12" onclick="cardClicked(event)"></div>
+                <div class="square pink backside" id="13" onclick="cardClicked(event)"></div>
+                <div class="square teal backside" id="14" onclick="cardClicked(event)"></div>
+                <div class="square rust backside" id="15" onclick="cardClicked(event)"></div>
             </div>
     <button>Reset Game</button>
     
