responsive design update

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <h1>Match All Eight Pairs </h1>
-    <h2>You have 5 attempts!</h2>
-    <h3></h3>
+    <div>
+        <h1>Match All Eight Pairs </h1>
+        <h2>You have 5 attempts!</h2>
+        <h3></h3>
+    </div>
+    <div class="flex-container">
+        <div>
             <div class="row">
                 <div class="square pink backside" id="0"></div>
                 <div class="square rust backside" id="1"></div>
@@ -36,6 +40,10 @@
                 <div class="square teal backside" id="14"></div>
                 <div class="square rust backside" id="15"></div>
             </div>
-    <button onClick="window.location.reload();">Reset Game</button>
+        </div>
+    </div>
+    <div>
+        <button onClick="window.location.reload();">Reset Game</button>
+    </div>
 </body>
 </html>
