--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
 </head>
 <body>
     <h1>Match All Eight Pairs </h1>
-    <h2>You have 5 attempts!</h2>
+    <h2>You have 8 attempts!</h2>
     <h3></h3>
 
     <div class="flex-container">
         <div>
             <div class="row">
-                <div class="square pink backside" id="0"></div>
-                <div class="square rust backside" id="1"></div>
-                <div class="square blue backside" id="2"></div>
-                <div class="square green backside" id="3"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
             </div>
             <div class="row">
-                <div class="square yellow backside" id="4"></div>
-                <div class="square teal backside" id="5"></div>  
-                <div class="square orange backside" id="6"></div>
-                <div class="square purple backside" id="7"></div>              
+                <div class="square"></div>
+                <div class="square"></div>  
+                <div class="square"></div>
+                <div class="square"></div>              
             </div>
             <div class="row">
-                <div class="square purple backside" id="8"></div>
-                <div class="square blue backside" id="9"></div>
-                <div class="square yellow backside" id="10"></div>
-                <div class="square orange backside" id="11"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
             </div>
             <div class="row">
-                <div class="square green backside" id="12"></div>
-                <div class="square pink backside" id="13"></div>
-                <div class="square teal backside" id="14"></div>
-                <div class="square rust backside" id="15"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
             </div>
         </div>
     </div>
